--- a/base_templates/base.html
+++ b/base_templates/base.html
@@ -16,14 +16,14 @@
         {% if user.is_authenticated %}
 
 
-        <a >Welcome {{user}}!</a>
+        <a href="{%url 'home' %}">Welcome {{user}}!</a>
         <a href="javascript:{document.getElementById('logout').submit()}">Logout</a>
         <form id="logout"action="{% url 'logout' %}" method="POST">
           {% csrf_token %}
           <input type="hidden" />
         </form>
 
-        <a href="#home">Your Trips</a>
+        <a href="{%url 'home' %}">Your Trips</a>
         <a href="{%url 'create'%}">Create a Trip</a>
 
         <!-- <a href="{% url 'logout'%}">Logout</a> -->
