post is working

--- a/base_templates/base.html
+++ b/base_templates/base.html
@@ -24,7 +24,7 @@
         </form>
 
         <a href="{%url 'home' %}">Your Trips</a>
-        <a href="{%url 'create'%}">Create a Trip</a>
+        <a href="{%url 'brewmap'%}">Create a Trip</a>
 
         <!-- <a href="{% url 'logout'%}">Logout</a> -->
 
