now city search is working

--- a/base_templates/base.html
+++ b/base_templates/base.html
@@ -41,11 +41,11 @@
 
           {% endblock%}
         </div>
-        <footer class="mt-5 text-muted">
-        <div class="container">
-          <p class='text-danger text-center'>&copy; BrewTrip <i class="fab fa-python"></i> {% now 'Y'%}</p>
-        </div>
-        </footer>
 
   </body>
+  <footer >
+    <div>
+      <p>&copy; BrewTrip {% now 'Y'%}</p>
+    </div>
+  </footer>
 </html>
