--- a/base_templates/base.html
+++ b/base_templates/base.html
@@ -23,7 +23,7 @@
           <input type="hidden" />
         </form>
 
-        <a href="{%url 'home' %}">Your Trips</a>
+        <a href="{%url 'brewmap' %}">Your Trips</a>
         <a href="{%url 'brewapi'%}">Create a Trip</a>
 
         <!-- <a href="{% url 'logout'%}">Logout</a> -->
@@ -40,7 +40,7 @@
           {% block base %}
 
           {% endblock%}
-        
+
 
   </body>
   <footer >
