updating read me

--- a/base_templates/base.html
+++ b/base_templates/base.html
@@ -43,7 +43,7 @@
   </body>
   <footer >
     <div>
-      <p>&copy; BrewTrip {% now 'Y'%}</p>
+      <p>&copy; <a href="https://vast-refuge-41056.herokuapp.com/">BrewTrip {% now 'Y'%}</a></p>
     </div>
   </footer>
 </html>
