--- a/base_templates/base.html
+++ b/base_templates/base.html
@@ -43,7 +43,8 @@
   </body>
   <footer >
     <div>
-      <p>&copy; <a href="https://vast-refuge-41056.herokuapp.com/">BrewTrip {% now 'Y'%}</a></p>
+      <p>&copy; BrewTrip {% now 'Y'%} </p>
     </div>
+    <a href="http://vast-refuge-41056.herokuapp.com/">Click here for next!</a>
   </footer>
 </html>
