--- a/base_templates/base.html
+++ b/base_templates/base.html
@@ -23,7 +23,7 @@
           <input type="hidden" />
         </form>
 
-        <a href="{%url 'brewmap' %}">Your Trips</a>
+        <a href="{%url 'favorites' %}">Favorites</a>
         <a href="{%url 'brewapi'%}">Create a Trip</a>
 
         {% else %}
